--- a/CSS/webpage.css
+++ b/CSS/webpage.css
@@ -89,7 +89,7 @@
   }
   
   body {
-    background-image: url("/PersonalWebpage/Media/redandblack2.jpg");
+    background-image: url("/Media/redandblack2.jpg");
     background-size: cover;
   }
   
