--- a/CSS/webpage.css
+++ b/CSS/webpage.css
@@ -1,10 +1,11 @@
 * {
     font-family: "Tahoma", sans-serif;
     color: white;
+    box-sizing: border-box;
   }
   
   h1 {
-    text-align: left;
+    text-align: center;
     padding: 10px;
     color: white;
 
@@ -16,11 +17,12 @@
 
   .nav {
     overflow: hidden;
+    text-align: center;
   }
 
   .nav a {
-    float: left;
-    display: block;
+    /* float: left; */
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -61,7 +63,7 @@
     .nav.responsive a {
       float: none;
       display: block;
-      text-align: left;
+      text-align: center;
     }
   }
   
@@ -73,29 +75,38 @@
     "aside-one main main main aside-two" 
     "footer footer footer footer footer";
     margin-top: 2rem;
-    gap: 8px;
+    gap: 2.5rem;
+    position: relative;
+
   }
   
   .header {
     grid-area: header;
     background-color: rgb(12, 12, 12);
-    text-align: left;
+    text-align: center;
     padding: 10px;
-    opacity: 1;
     border-radius: 10px;
     border-style: ridge;
     margin: 0.5rem;
+  }
+  
+  main {
+    display: contents;
   }
   
   .main {
     grid-area: main;
     background-color: rgb(12, 12, 12);
     border-radius: 10px;
-    text-align: left;
-    padding: 10px;
-    opacity: 1;
-    margin: auto;
+    text-align: center;
+    padding-bottom: 2.5rem;
+    margin: 10rem;
     border-style: ridge;
+  }
+
+  .main:not(:first-child) {
+    opacity: 0;
+    transition: opacity 0.5s, transform 0.5s;
   }
   
   .aside-one {
@@ -124,13 +135,13 @@
   
   .footer {
     grid-area: footer;
-    background-color: rgb(12, 12, 12);
-    border-radius: 10px;
-    text-align: left;
+    text-align: center;
     padding: 10px;
-    opacity: 1;
-    margin: auto;
-    border-style: ridge;
+    margin-bottom: -12.25rem;
+    position: absolute;
+    bottom: 0;
+    height: 2.5rem;
+    width: 100%;
     
   }
   
@@ -145,6 +156,7 @@
     background-image: url("../Media/redandblack2.jpg");
     background-size: cover;
     margin: 0;
+    min-height: 100vh;
   }
 
   @keyframes soc {
@@ -190,8 +202,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     opacity: 0;
     transition: all 1s ease-in-out;
   }
@@ -283,3 +295,41 @@
     background-color: #a83737;
   }
 
+  .left {
+    transform-origin: left center;
+    transform: translateX(-50%);
+  }
+
+  .right {
+    transform-origin: right center;
+    transform: translateX(50%);
+  }
+
+  .slide-in {
+    opacity: 1 !important;
+    transform: translateX(0);
+  }
+
+
+  div.gallery {
+    display: inline-block;
+    width: 180px;
+    
+  }
+
+  div.gallery img {
+    max-width: 150px;
+    max-height: 150px;
+  }
+  
+  div.gallery:hover {
+    border: 3px ridge white;
+    
+  }
+  
+  div.cap {
+    padding: 2px;
+    text-align: center;
+    font-size: small;
+  }
+  
